--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <input id="passengers3" placeholder="How many passengers for flight 3?">
     <input id="passengers4" placeholder="How many passengers for flight 4?">
     <input id="passengers5" placeholder="How many passengers for flight 5?">
-    <button id="calculateTotalPassengers" type="submit" onclick="onCalculatePassengers()">Calculate total number of passengers</button>
+    <button id="calculateTotalPassengers" type="submit" onclick="onCalculatePassengers()">Calculate total # of passengers</button>   
     <p id="calculatedPassengers"></p>    
 
     <b>
